chore: 🤖 bundle before after version change

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,8 @@
 {
   "importMap": "import_map.json",
   "tasks": {
-    "bundleScriptsFile": "deno run --allow-all scripts/bundleScriptsFile.ts",
-    "version": "deno task bundle && deno run --allow-all scripts/version.ts",
+    "bundleScriptsFile": "deno run -A scripts/bundleScriptsFile.ts",
+    "version": "deno run -A scripts/version.ts",
     "bundle": "deno bundle cli/main.ts cli/launch.ts"
   }
 }
